<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <Button
        android:id="@+id/scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_scan_btn"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/bar_code_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:hint="@string/ma_editText_hint"
        android:autofillHints="@string/ma_editText_hint"
        tools:ignore="UnusedAttribute" />
    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_search_btn"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />


</LinearLayout>